fix: Misalignment of "There are no articles to show" box (#4959)

--- a/p/themes/Ansum/_components.scss
+++ b/p/themes/Ansum/_components.scss
@@ -147,9 +147,6 @@
 
 /*=== Alerts */
 .alert {
-	margin: 1rem 0;
-	// width: 100%;
-	padding: 1rem;
 	background: variables.$grey-lighter;
 	color: variables.$grey-dark;
 	font-size: 1rem;
